[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codebase-refactor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
codebase-refactor = "codebase_refactor.cli:main"

[tool.pytest.ini_options]
testpaths = ["codebase_refactor/tests"]

[tool.coverage.run]
source = ["codebase_refactor"]
omit = ["codebase_refactor/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
